added play field

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,40 @@
 <body>
   <h1>Express</h1>
   <p>Welcome to Express</p>
+  <table> 
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+
+
+  </table>
 </body>
 
 </html>
